[package]
name = "sing-config"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["from"] }
indexmap = "2.13.0"
once_cell = "1.21.3"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toml = "1.0.1"
